--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
-  font-family:cursive
-  ;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
